# scratchlet

./: .gitignore  Cargo.toml  LICENSE  README.md
catnip/: Cargo.toml
catnip/src/: main.rs
pawgen/: Cargo.toml
pawgen/src/codegen/: blocks.rs  mod.rs  project.rs  sprite.rs
pawgen/src/schema/: blocks.rs  mod.rs  project.rs  targets.rs
scratchc/: Cargo.toml
scratchc/src/: lib.rs
scratchc/src/common/: error.rs  location.rs
scratchc/src/frontend/parser/: lexer.rs
scratchc/src/mir/: code.rs  mod.rs  project.rs  refinery.rs  sprite.rs
