[workspace]
resolver = "2"
members = ["catnip", "pawgen", "scratchc"]

[workspace.package]
version = "0.1.0"
authors = ["Oliwier Michalik"]
repository = "https://github.com/olix3001/scratchlet"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

pawgen = { path = "./pawgen" }
scratchc = { path = "./scratchc" }
