[package]
name = "scratchc"
edition = "2021"
description = "Compiler for scratchlet language."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_more = { version = "1.0.0", features = ["constructor", "is_variant", "unwrap"] }
pawgen.workspace = true
